WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101479
[sh4] JavaScriptCore JIT build is broken for sh4 arch
https://bugs.webkit.org/show_bug.cgi?id=101479
Summary
[sh4] JavaScriptCore JIT build is broken for sh4 arch
Julien Brianceau
Reported
2012-11-07 08:32:02 PST
Implementation of the following functions are missing from JavaScriptCore sh4 JIT : void load8Signed(BaseIndex address, RegisterID dest) void load16Signed(BaseIndex address, RegisterID dest) void store8(RegisterID src, BaseIndex address) void store16(RegisterID src, BaseIndex address) void moveDoubleToInts(FPRegisterID src, RegisterID dest1, RegisterID dest2) void moveIntsToDouble(RegisterID src1, RegisterID src2, FPRegisterID dest, FPRegisterID scratch) void loadFloat(BaseIndex address, FPRegisterID dest) void loadDouble(BaseIndex address, FPRegisterID dest) void storeFloat(FPRegisterID src, BaseIndex address) void storeDouble(FPRegisterID src, BaseIndex address) void addDouble(FPRegisterID op1, FPRegisterID op2, FPRegisterID dest) void addDouble(AbsoluteAddress address, FPRegisterID dest) void convertFloatToDouble(FPRegisterID src, FPRegisterID dst) void convertDoubleToFloat(FPRegisterID src, FPRegisterID dst)
Attachments
New function implementation in SH4 JIT
(14.62 KB, patch)
2012-11-23 00:31 PST
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
Add missing implementation in SH4 JIT
(13.89 KB, patch)
2012-11-23 00:34 PST
,
Julien Brianceau
fpizlo
: review+
fpizlo
: commit-queue-
Details
Formatted Diff
Diff
Add missing implementation in SH4 JIT (with style fix)
(14.67 KB, patch)
2012-11-23 03:07 PST
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2012-11-23 00:31:43 PST
Created
attachment 175742
[details]
New function implementation in SH4 JIT
Julien Brianceau
Comment 2
2012-11-23 00:34:22 PST
Created
attachment 175743
[details]
Add missing implementation in SH4 JIT
WebKit Review Bot
Comment 3
2012-11-23 00:36:47 PST
Attachment 175743
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/SH4Assembler.h:2097: Omit int when using unsigned [runtime/unsigned] [1] Source/JavaScriptCore/assembler/SH4Assembler.h:2098: Omit int when using unsigned [runtime/unsigned] [1] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4
2012-11-23 02:57:44 PST
Comment on
attachment 175743
[details]
Add missing implementation in SH4 JIT View in context:
https://bugs.webkit.org/attachment.cgi?id=175743&action=review
>> Source/JavaScriptCore/assembler/SH4Assembler.h:2097 >> + static void printInstr(uint16_t opc, unsigned int size, bool isdoubleInst = true) { }; > > Omit int when using unsigned [runtime/unsigned] [1]
The style queue is right. Can you fix this style bug and submit for cq? (or commit if you have the privileges). R=me other than the style.
>> Source/JavaScriptCore/assembler/SH4Assembler.h:2098 >> + static void printBlockInstr(uint16_t* first, unsigned int offset, int nbInstr) { }; > > Omit int when using unsigned [runtime/unsigned] [1]
Ditto.
Julien Brianceau
Comment 5
2012-11-23 03:07:59 PST
Created
attachment 175764
[details]
Add missing implementation in SH4 JIT (with style fix)
WebKit Review Bot
Comment 6
2012-11-23 05:12:12 PST
Comment on
attachment 175764
[details]
Add missing implementation in SH4 JIT (with style fix) Clearing flags on attachment: 175764 Committed
r135597
: <
http://trac.webkit.org/changeset/135597
>
WebKit Review Bot
Comment 7
2012-11-23 05:12:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug